<resources>
    <string name="app_name">GPA Manager</string>
    <string name="naveStart">Open Navigation Drawer</string>
    <string name="naveStop">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="rate_us">Rate Us</string>
    <string name="set">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="logout">Logout</string>
    <string name="acount">Acount</string>
    <string name="new_user">New User</string>
    <string name="new1">New</string>
    <string name="user">User</string>
    <string name="welcome_userr">Welcome Userr</string>
    <string name="aboutt">aboutt</string>
    <string name="about">About</string>
    <string name="get_support">Get Support</string>
    <string name="dashboard">Dashboard</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="settings1">Settings</string>
    <string name="contact">Contact</string>
    <string name="cybher">Cybher</string>
    <string name="cye">Cybher</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="todo3">TODO</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_a_student_s_profile">Add a student\'s Profile</string>
    <string name="view_profiles">View Profiles</string>
    <string name="share">Share</string>
    <string name="study_plan">study Plan</string>
    <string name="study_plan1">Study Plan</string>
    <string name="about_us">About Us</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="courses">Courses</string>
    <string name="credit_hours">Credit hours</string>

    <string name="click1">Continue</string>
    <string name="inputText">Input Number of Course and Credit hours</string>
</resources>