<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    app:cardElevation="20dp"
    android:layout_height="300dp"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="295dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_text"
            android:layout_width="261dp"
            android:layout_height="81dp"
            android:layout_marginTop="48dp"
            android:fontFamily="monospace"
            android:text="@string/inputText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/course_num"
            android:layout_width="130dp"
            android:layout_height="54dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="152dp"
            android:autofillHints=""
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/courses"
            android:inputType="number"
            android:padding="12dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/credit_hour"
            android:layout_width="130dp"
            android:layout_height="54dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="160dp"
            android:autofillHints=""
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/credit_hours"
            android:inputType="number"
            android:padding="12dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/my_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="132dp"
            android:layout_height="52dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/item_color"
            android:text="@string/click1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>